# wvdial-gui

./: CMakeLists.txt  README.md
icons/: icons.qrc
rpm/: BUILD_INSTRUCTIONS  wvdial-gui.spec
src/: main.cpp  wvdial.cpp  wvdial.h  wvdial.ui
